--- a/.development.env
+++ b/.development.env
@@ -1,13 +1,14 @@
-DATABASE_CONNECTION: 'DATABASE_CONNECTION',
-PORT: 3001
-NODE_ENV: 'development'
-BASE_URL: 'https://qr.pha.it/'
-PHA_BASE_URL: 'https://web.pharmaround.it/farmacie'
+DATABASE_CONNECTION = DATABASE_CONNECTION
+PORT = 3000
+NODE_ENV = development
+BASE_URL = https://web.pharmaround.it/
+PHA_BASE_URL = https://web.pharmaround.it/admin
+MONGO_URL = mongodb://localhost/pharmaround
 
-EMAIL_HOST: 'smtp.gmail.com'
-EMAIL_PORT: 465
-EMAIL_SECURE: 'true'
-EMAIL_USER: 'd4ut0m4ti0n@gmail.com'
-EMAIL_PASSWORD: 'epjtsosohwnpkxff'
-EMAIL_SENDER: 'Pharmaround'
-EMAIL_ADDRESS: 'd4ut0m4ti0n@gmail.com'
+EMAIL_HOST = smtp.gmail.com
+EMAIL_PORT = 465
+EMAIL_SECURE = true
+EMAIL_USER = d4ut0m4ti0n@gmail.com
+EMAIL_PASSWORD = epjtsosohwnpkxff
+EMAIL_SENDER = Pharmaround
+EMAIL_ADDRESS = d4ut0m4ti0n@gmail.com
