--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --detectOpenHandles",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
     "docker:build": "docker build .",
-    "docker:run": "docker-compose"
+    "docker:run": "docker-compose",
+    "lint": "eslint \"{src,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" --config ./.prettierrc",
+    "lint:fix": "eslint --fix",
+    "prepare": "husky install",
+    "huskyPreCommit": "yarn run huskyPreCommit && yarn run lint && yarn run lint:fix && yarn run format"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -65,7 +68,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "husky": "^7.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
